test_regress/t/t_pp_pragma_bad.out
%Warning-PRAGMAERR: t/t_pp_pragma_bad.v:7:1: `pragma is missing a pragma_expression.
    7 | `pragma
      | ^~~~~~~
                    ... For warning description see https://verilator.org/warn/PRAGMAERR?v=4.201
                    ... Use "/* verilator lint_off PRAGMAERR */" and lint_on around source to disable this message.
`line 1 "t/t_pp_pragma_bad.v" 1
 

`line 3 "t/t_pp_pragma_bad.v" 0
 
 
 

`line 7 "t/t_pp_pragma_bad.v" 0
`pragma

`line 9 "t/t_pp_pragma_bad.v" 2
%Error: Exiting due to
